* What's new in version 2.6

- SystemTap now supports SDT probes with operands that refer to symbols.

- While in listing mode (-l/-L), probes printed are now more consistent
  and precise.

- Statement probes now support enumerated linenos to probe discontiguous
  linenos using the form:

  process.statement("foo@file.c:3,5-7,9")

- Statement counting is now suppressed in the generated c code for probes that
  are non-recursive and loop-free. Statement counting can be turned back on in
  unoptimize mode (-u).

- SystemTap now asserts that the PID provided for a process probe corresponds
  to a runnning process.

- DWARF process probes can be bound to a specific process using the form:

  process(PID).function("*")

- SystemTap now accepts additional scripts through the new -E SCRIPT option.
  There still needs to be a main script specified through -e or file in order
  to provide an additional script. This makes it feasible to have scripts in
  the $HOME/.systemtap/rc file.  For example:

  -E 'probe begin, end, error { log("systemtap script " . pn()) }'
  -E 'probe timer.s(30) { error ("timeout") }

  The -E SCRIPT option can also be used in listing mode (-l/-L), such that
  probe points for the additional scripts will not listed, but other parts of
  the script are still available, such as macros or aliases.

* What's new in version 2.5, 2014-04-30

- Systemtap now supports backtracing through its own, invoking module.

- Java probes now support backtracing using the print_java_backtrace()
  and sprint_java_backtrace() functions.

- Statement probes (e.g. process.statement) are now faster to resolve,
  more precise, and work better with inlined functions.

- New switches have been added to help inspect the contents of installed
  library files:

  stap --dump-functions --> list all library functions and their args
  stap --dump-probe-aliases --> list all library probe aliases

- The heuristic algorithms used to search for function-prologue