@@ -373,21 +373,21 @@ proc report_untested_probes {} {
          }
 
          process.library(string).plt -
-         process.library(string).plt.statement(number) -
+         process.library(string).plt.return -
          process.library(string).plt(string) -
-         process.library(string).plt(string).statement(number) -
+         process.library(string).plt(string.return) -
          process(string).library(string).plt -
-         process(string).library(string).plt.statement(number) -
+         process(string).library(string).plt.return -
          process(string).library(string).plt(string) -
-         process(string).library(string).plt(string).statement(number) -
+         process(string).library(string).plt(string.return) -
          process.plt -
-         process.plt.statement(number) -
+         process.plt.return -
          process.plt(string) -
-         process.plt(string).statement(number) -
+         process.plt(string).return -
          process(string).plt -
-         process(string).plt.statement(number) -
+         process(string).plt.return -
          process(string).plt(string) -
-         process(string).plt(string).statement(number)
+         process(string).plt(string).return
          {
             if {![plt_probes_p]} {
                setup_kfail PLT *-*-*
@@ -869,10 +869,10 @@ if {$exepath != ""} {
       stap_list_cmd_lib "process.library(\"sopath\").plt" \
          "re:process\\\(\"$exefullpath\"\\\)\\\.library\\\(\"$sofullpath\"\\\)\\\.plt\\\(\"\[^\"\]+\"\\\)" {-1}
 
-      testing_probe {process.library(string).plt.statement(number)}
+      testing_probe {process.library(string).plt.return}
 
-      stap_list_cmd_lib "process.library(\"sopath\").plt.statement(0x123)" \
-         "re:process\\\(\"$exefullpath\"\\\)\\\.library\\\(\"$sofullpath\"\\\)\\\.statement\\\(0x\[a-f0-9\]+\\\)"
+      stap_list_cmd_lib "process.library(\"sopath\").plt.return" \
+         "re:process\\\(\"$exefullpath\"\\\)\\\.library\\\(\"$sofullpath\"\\\)\\\.plt\\\(\"\[^\"\]+\"\\\).return" {-1}
 
       testing_probe {process.library(string).plt(string)}
 
@@ -885,16 +885,16 @@ if {$exepath != ""} {
       stap_list_cmd_lib "process.library(\"sopath\").plt(\"\\\[lp\\\]*\")" \
          "re:process\\\(\"$exefullpath\"\\\)\\\.library\\\(\"$sofullpath\"\\\)\\\.plt\\\(\"(libbar|printf)\"\\\)" {-1}
 
-      testing_probe {process.library(string).plt(string).statement(number)}
+      testing_probe {process.library(string).plt(string).return}
 
-      stap_list_cmd_lib "process.library(\"sopath\").plt(\"libbar\").statement(0x123)" \
-         "re:process\\\(\"$exefullpath\"\\\)\\\.library\\\(\"$sofullpath\"\\\)\\\.statement\\\(0x\[a-f0-9\]+\\\)"
+      stap_list_cmd_lib "process.library(\"sopath\").plt(\"libbar\").return" \
+         "re:process\\\(\"$exefullpath\"\\\)\\\.library\\\(\"$sofullpath\"\\\)\\\.plt\\\(\"libbar\"\\\).return"
 
-      stap_list_cmd_lib "process.library(\"sopath\").plt(\"libba?\").statement(0x123)" \
-         "re:process\\\(\"$exefullpath\"\\\)\\\.library\\\(\"$sofullpath\"\\\)\\\.statement\\\(0x\[a-f0-9\]+\\\)"
+      stap_list_cmd_lib "process.library(\"sopath\").plt(\"libba?\").return" \
+         "re:process\\\(\"$exefullpath\"\\\)\\\.library\\\(\"$sofullpath\"\\\)\\\.plt\\\(\"libbar\"\\\).return"
 
-      stap_list_cmd_lib "process.library(\"sopath\").plt(\"\\\[lp\\\]*\").statement(0x123)" \
-         "re:process\\\(\"$exefullpath\"\\\)\\\.library\\\(\"$sofullpath\"\\\)\\\.statement\\\(0x\[a-f0-9\]+\\\)"
+      stap_list_cmd_lib "process.library(\"sopath\").plt(\"\\\[lp\\\]*\").return" \
+         "re:process\\\(\"$exefullpath\"\\\)\\\.library\\\(\"$sofullpath\"\\\)\\\.plt\\\(\"(libbar|printf)\"\\\).return" {-1}
    }
 
    testing_probe {process.library(string).provider(string).mark(string)}
@@ -951,10 +951,11 @@ if {$exepath != ""} {
       stap_list_cmd "process.plt" \
          "re:process\\\(\"$exefullpath\"\\\)\\\.plt\\\(\"\[^\"\]+\"\\\)" {-1}
 
-      testing_probe {process.plt.statement(number)}
 
-      stap_list_cmd "process.plt.statement(0x123)" \
-         "re:process\\\(\"$exefullpath\"\\\)\\\.statement\\\(0x\[a-f0-9\]+\\\)"
+      testing_probe {process.plt.return}
+
+      stap_list_cmd "process.plt.return" \
+         "re:process\\\(\"$exefullpath\"\\\)\\\.plt\\\(\"\[^\"\]+\"\\\).return" {-1}
 
       testing_probe {process.plt(string)}
 
@@ -964,19 +965,16 @@ if {$exepath != ""} {
       stap_list_cmd "process.plt(\"libfo?\")" \
          "re:process\\\(\"$exefullpath\"\\\)\\\.plt\\\(\"libfoo\"\\\)"
 
-      stap_list_cmd "process.plt(\"\\\[lp\\\]*\")" \
-         "re:process\\\(\"$exefullpath\"\\\)\\\.plt\\\(\"(libfoo|printf)\"\\\)" {-1}
+      testing_probe {process.plt(string).return}
 
-      testing_probe {process.plt(string).statement(number)}
+      stap_list_cmd "process.plt(\"libfoo\").return" \
+         "re:process\\\(\"$exefullpath\"\\\)\\\.plt\\\(\"libfoo\"\\\).return"
 
-      stap_list_cmd "process.plt(\"libfoo\").statement(0x123)" \
-         "re:process\\\(\"$exefullpath\"\\\)\\\.statement\\\(0x\[a-f0-9\]+\\\)"
+      stap_list_cmd "process.plt(\"libfo?\").return" \
+         "re:process\\\(\"$exefullpath\"\\\)\\\.plt\\\(\"libfoo\"\\\).return"
 
-      stap_list_cmd "process.plt(\"libfo?\").statement(0x123)" \
-         "re:process\\\(\"$exefullpath\"\\\)\\\.statement\\\(0x\[a-f0-9\]+\\\)"
-
-      stap_list_cmd "process.plt(\"\\\[lp\\\]*\").statement(0x123)" \
-         "re:process\\\(\"$exefullpath\"\\\)\\\.statement\\\(0x\[a-f0-9\]+\\\)"
+      stap_list_cmd "process.plt(\"\\\[lp\\\]*\").return" \
+         "re:process\\\(\"$exefullpath\"\\\)\\\.plt\\\(\"(libfoo|printf)\"\\\).return" {-1}
    }
 
    testing_probe {process.provider(string).mark(string)}
@@ -1145,10 +1143,10 @@ if {$exepath != ""} {
       stap_list "process($valid_pid).plt" \
          "re:process\\\(\"$exefullpath\"\\\)\\\.plt\\\(\"\[^\"\]+\"\\\)" {-1}
 
-      testing_probe {process(number).plt.statement(number)}
+      testing_probe {process(number).plt.return}
 
-      stap_list "process($valid_pid).plt.statement(0x123)" \
-         "re:process\\\(\"$exefullpath\"\\\)\\\.statement\\\(0x\[a-f0-9\]+\\\)"
+      stap_list "process($valid_pid).plt.return" \
+         "re:process\\\(\"$exefullpath\"\\\)\\\.plt\\\(\"\[^\"\]+\"\\\).return" {-1}
 
       testing_probe {process(number).plt(string)}
 
@@ -1161,16 +1159,16 @@ if {$exepath != ""} {
       stap_list "process($valid_pid).plt(\"\\\[lp\\\]*\")" \
          "re:process\\\(\"$exefullpath\"\\\)\\\.plt\\\(\"(libfoo|printf)\"\\\)" {-1}
 
-      testing_probe {process(number).plt(string).statement(number)}
+      testing_probe {process(number).plt(string).return}
 
-      stap_list "process($valid_pid).plt(\"libfoo\").statement(0x123)" \
-         "re:process\\\(\"$exefullpath\"\\\)\\\.statement\\\(0x\[a-f0-9\]+\\\)"
+      stap_list "process($valid_pid).plt(\"libfoo\").return" \
+         "re:process\\\(\"$exefullpath\"\\\)\\\.plt\\\(\"libfoo\"\\\).return"
 
-      stap_list "process($valid_pid).plt(\"libfo?\").statement(0x123)" \
-         "re:process\\\(\"$exefullpath\"\\\)\\\.statement\\\(0x\[a-f0-9\]+\\\)"
+      stap_list "process($valid_pid).plt(\"libfo?\").return" \
+         "re:process\\\(\"$exefullpath\"\\\)\\\.plt\\\(\"libfoo\"\\\).return"
 
-      stap_list "process($valid_pid).plt(\"\\\[lp\\\]*\").statement(0x123)" \
-         "re:process\\\(\"$exefullpath\"\\\)\\\.statement\\\(0x\[a-f0-9\]+\\\)"
+      stap_list "process($valid_pid).plt(\"\\\[lp\\\]*\").return" \
+         "re:process\\\(\"$exefullpath\"\\\)\\\.plt\\\(\"(libfoo|printf)\"\\\).return" {-1}
    }
 
    testing_probe {process(number).provider(string).mark(string)}
@@ -1266,17 +1264,13 @@ stap_list "process($valid_pid).thread.end"
    #process(string).library(string).function(string).return
    #process(string).library(string).mark(string)
    #process(string).library(string).plt
-   #process(string).library(string).plt.statement(number)
    #process(string).library(string).plt(string)
-   #process(string).library(string).plt(string).statement(number)
    #process(string).library(string).provider(string).mark(string)
    #process(string).library(string).statement(number)
    #process(string).library(string).statement(string)
    #process(string).mark(string)
    #process(string).plt
-   #process(string).plt.statement(number)
    #process(string).plt(string)
-   #process(string).plt(string).statement(number)
    #process(string).provider(string).mark(string)
    #process(string).statement(number)
    #process(string).statement(string)
